feat almost all features
