# src/models/exercises.model.go
@@ -23,14 +23,15 @@ type ExerciseAnswers struct {
 	ID          int    `json:"id" db:"id"`
 	Exercise_ID  int    `json:"exercise_id" db:"exercise_id"`
 	Answers any `json:"answers" db:"answers"`
-	Teacher_ID int `json:"teacher_id" db:"teacher_id"`
+	Student_ID int `json:"student_id" db:"student_id"`
+	Status     string    `json:"status" db:"status"`
 }
 
 // CreateExerciseAnswersRequest represents the request body for creating an exercise
 type CreateExerciseAnswersRequest struct {
 	Exercise_ID  int    `json:"exercise_id" db:"exercise_id"`
 	Answers any `json:"answers" db:"answers"`
-	Teacher_ID int `json:"teacher_id" db:"teacher_id"`
+	Student_ID int `json:"student_id" db:"student_id"`
 }
 
 type ExercisesDisplay struct {
@@ -40,4 +41,17 @@ type ExercisesDisplay struct {
 
 type ExerciseAnswersDisplay struct {
 	Answers any `json:"answers" db:"answers"`
+}
+
+type ExerciseGrades struct {
+	ID          int    `json:"id" db:"id"`
+	Exercise_ID  int    `json:"exercise_id" db:"exercise_id"`
+	Student_ID       int `json:"student_id" db:"student_id"`
+	Score     float64    `json:"score" db:"score"`
+	Detail any `json:"detail" db:"detail"`
+}
+
+type CalculateExerciseGrades struct {
+	Exercise_ID  int    `json:"exercise_id" db:"exercise_id"`
+	Student_ID       int `json:"student_id" db:"student_id"`
 }
