# src/server/routes.go
@@ -12,6 +12,7 @@ import (
 	teachers "project-ppl-be/src/api/v1/teachers"
 	users "project-ppl-be/src/api/v1/users"
 	exercises "project-ppl-be/src/api/v1/exercises"
+	exams "project-ppl-be/src/api/v1/exams"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -94,17 +95,41 @@ func SetupRouter() *gin.Engine {
 		exercisesGroup := v1Group.Group("/exercises")
 		exercisesGroup.Use(middleware.AuthMiddleware())
 		exercisesGroup.GET("", exercises.ExercisesGetByMaterialHandler)
+		exercisesGroup.GET("/student", exercises.ExercisesGetByMaterialForStudentHandler)
 		exercisesGroup.POST("", exercises.ExercisesPostHandler)
+		exercisesGroup.POST("/calculate-grade", exercises.CalculateGradePostHandler)
+		exercisesGroup.GET("/get-grade", exercises.ExerciseGradesGetHandler)
 		exercisesGroup.PATCH("", exercises.ExercisesUpdateHandler)
 		exercisesGroup.DELETE("", exercises.ExercisesDeleteHandler)
+		exercisesGroup.GET("/get-all-grade", exercises.ExerciseAllGradesGetHandler)
 
 		// EXERCISE ANSWERS
 		exerciseAnswersGroup := v1Group.Group("/exercises-answers")
 		exerciseAnswersGroup.Use(middleware.AuthMiddleware())
 		exerciseAnswersGroup.GET("", exercises.ExerciseAnswersGetHandler)
 		exerciseAnswersGroup.POST("", exercises.ExerciseAnswersPostHandler)
-		// exerciseAnswersGroup.PATCH("", exercises.ExercisesUpdateHandler)
-		// exercisesGroup.DELETE("", exercises.ExercisesDeleteHandler)
+		exerciseAnswersGroup.PATCH("", exercises.ExerciseAnswersUpdateHandler)
+		exerciseAnswersGroup.DELETE("", exercises.ExerciseAnswersDeleteHandler)
+
+		// EXAMS
+		examsGroup := v1Group.Group("/exams")
+		examsGroup.Use(middleware.AuthMiddleware())
+		examsGroup.GET("", exams.ExamsGetByClassHandler)
+		examsGroup.GET("/student", exams.ExamsGetByClassForStudentHandler)
+		examsGroup.POST("", exams.ExamsPostHandler)
+		examsGroup.POST("/calculate-grade", exams.CalculateGradePostHandler)
+		examsGroup.GET("/get-grade", exams.ExamGradesGetHandler)
+		examsGroup.PATCH("", exams.ExamsUpdateHandler)
+		examsGroup.DELETE("", exams.ExamsDeleteHandler)
+		examsGroup.GET("/get-all-grade", exams.ExamsAllGradesGetHandler)
+
+		// EXERCISE ANSWERS
+		examAnswersGroup := v1Group.Group("/exams-answers")
+		examAnswersGroup.Use(middleware.AuthMiddleware())
+		examAnswersGroup.GET("", exams.ExamAnswersGetHandler)
+		examAnswersGroup.POST("", exams.ExamAnswersPostHandler)
+		examAnswersGroup.PATCH("", exams.ExamAnswersUpdateHandler)
+		examAnswersGroup.DELETE("", exams.ExamAnswersDeleteHandler)
 
 		// DISCUSSIONS
 		discussionsGroup := v1Group.Group("/discussions")
